--- a/BookLibrary/ClientProxy/App.config
+++ b/BookLibrary/ClientProxy/App.config
@@ -3,4 +3,19 @@
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_ILibraryService">
+          <reliableSession inactivityTimeout="00:15:00" enabled="true" />
+          <security mode="None" />
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://localhost:9000/service/wh" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_ILibraryService" contract="LibraryServiceReference.ILibraryService"
+        name="NetTcpBinding_ILibraryService" />
+    </client>
+  </system.serviceModel>
 </configuration>
