implemented third task and migrated to C# =(

--- a/BookLibrary/Server/Web.config
+++ b/BookLibrary/Server/Web.config
@@ -7,8 +7,6 @@
   <system.web>
     <compilation debug="true" />
   </system.web>
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
@@ -19,12 +17,12 @@
       </serviceBehaviors>
     </behaviors>
     <services>
-      <service name="BookLibrary.Server.LibraryService"
+      <service name="Server.LibraryService"
                behaviorConfiguration="netTcp">
         <endpoint binding="netTcpBinding"
                   address="wh"
                   bindingConfiguration="EndPointConfiguration"
-                  contract="BookLibrary.Server.ILibraryService"/>
+                  contract="Server.ILibraryService"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:9000/service" />
