--- a/BookLibrary/Client/Client.csproj
+++ b/BookLibrary/Client/Client.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0AEDA078-2571-44BB-BFAD-31A845A806D1}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{2947368E-72D3-44E9-9181-0D35CEA8C4A5}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClientProxy</RootNamespace>
-    <AssemblyName>ClientProxy</AssemblyName>
+    <RootNamespace>Client</RootNamespace>
+    <AssemblyName>Client</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\LibraryServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -56,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Service References\LibraryServiceReference\ClientProxy.LibraryServiceReference.Book.datasource">
+    <None Include="Service References\LibraryServiceReference\Client.LibraryServiceReference.Book.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\LibraryServiceReference\LibraryService.wsdl" />
