forth homework (wcf rest)

--- a/BookLibrary/Server/Web.config
+++ b/BookLibrary/Server/Web.config
@@ -15,29 +15,32 @@
           <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
     <services>
-      <service name="Server.LibraryService"
-               behaviorConfiguration="netTcp">
-        <endpoint binding="netTcpBinding"
+      <service name="Server.LibraryService">
+        <endpoint binding="webHttpBinding"
                   address="wh"
                   bindingConfiguration="EndPointConfiguration"
-                  contract="Server.ILibraryService"/>
+                  contract="Server.ILibraryService"
+                  behaviorConfiguration="web"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:9000/service" />
             <add baseAddress="http://localhost:8000/service"/>
           </baseAddresses>
         </host>
       </service>
     </services>
     <bindings>
-      <netTcpBinding>
+      <webHttpBinding>
         <binding name="EndPointConfiguration" sendTimeout="00:01:00">
           <security mode="None" />
-          <reliableSession enabled="true" inactivityTimeout="00:15:00"/>
         </binding>
-      </netTcpBinding>
+      </webHttpBinding>
     </bindings>
   </system.serviceModel>
 </configuration>
